# tarot-reader

./: .gitignore  CHANGELOG.md  Improvement Considerations.md  LICENSE  MANIFEST.in  README.md  SRS.md  cli.py  demo.py  docker-compose.yml  pyproject.toml  setup.py
.github/: PYPI_SETUP.md
.github/workflows/: ci.yml  publish.yml  release.yml
api/: __init__.py  main.py  models.py
api/routers/: __init__.py  cards.py  readings.py
docker/: Dockerfile  Dockerfile.api
src/: __init__.py  search.py
tarot_reader/: __init__.py  __main__.py  core.py  deck.py  text_formatter.py
tests/: __init__.py  test_cli.py  test_core.py  test_deck.py  test_integration.py  test_personal_seeds.py  test_search.py  test_text_formatter.py
